--- a/index.html
+++ b/index.html
@@ -4,9 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>XEUS</title>
-    <link rel="stylesheet" href="/xeus/public/css/global.css">
-    <link rel="stylesheet" href="/xeus/public/css/style.css">
-    <link rel="stylesheet" href="/xeus/public/css/adaptive.css">
+    <link rel="stylesheet" href="css/global.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <header class="header_mainpage">
@@ -20,7 +19,7 @@
             </div>
             <div class="logo_container">
                 <a href="index.html">
-                    <img class="logo_xeus_header" src="/xeus/public/logo/XEUS.png" alt="">
+                    <img class="logo_xeus_header" src="logo/XEUS.png" alt="">
                 </a>
             </div>
             <div class="menu_right_container">
@@ -34,7 +33,7 @@
     </header>
     <main>
         <div class="main_background_image_container">
-            <img class="main_background_image" src="/xeus/public/img/game_main_bckrnd.png" alt="">
+            <img class="main_background_image" src="img/game_main_bckrnd.png" alt="">
         </div>
         <div class="abt_game_quote_container">
             <p class="abt_game_quote">THE GAME FROM UNKNOWN</p>
@@ -50,7 +49,7 @@
                 <div class="g1">
                     <div class="container_of_images_1">
                         <div class="image_1_main_content_container">
-                            <img class="image_1_main_content" src="/xeus/public/img/image_game2.png" alt="">
+                            <img class="image_1_main_content" src="img/image_game2.png" alt="">
                         </div>
                         <div class="text_1_main_content_container">
                             <p class="text_1_main_content">Lorem Impsum Lorem Impsum Lorem Impsum
@@ -65,7 +64,7 @@
                             </p>
                         </div>
                         <div class="image_2_main_content_container">
-                            <img class="image_2_main_content" src="/xeus/public/img/image_game3.png" alt="">
+                            <img class="image_2_main_content" src="img/image_game3.png" alt="">
                         </div>
                     </div>
                 </div>
