--- a/development.html
+++ b/development.html
@@ -4,9 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>XEUS</title>
-    <link rel="stylesheet" href="/xeus/public/css/global.css">
-    <link rel="stylesheet" href="/xeus/public/css/style.css">
-    <link rel="stylesheet" href="/xeus/public/css/adaptive.css">
+    <link rel="stylesheet" href="css/global.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <header class="header_mainpage">
@@ -20,7 +19,7 @@
             </div>
             <div class="logo_container">
                 <a href="index.html">
-                    <img class="logo_xeus_header" src="/xeus/public/logo/XEUS.png" alt="">
+                    <img class="logo_xeus_header" src="logo/XEUS.png" alt="">
                 </a>
             </div>
             <div class="menu_right_container">
@@ -34,7 +33,7 @@
     </header>
     <main>
         <div class="main_background_image_container">
-            <img class="main_background_image" src="/xeus/public/img/image_game4.png" alt="">
+            <img class="main_background_image" src="img/image_game4.png" alt="">
         </div>
         <div class="abt_game_quote_container">
             <p class="abt_game_quote">DEVELOPMENT</p>
@@ -48,7 +47,7 @@
                     
                     <div class="image_of_game_engine_container">
                     <a href="">
-                        <img class="image_of_game_engine_png" src="/xeus/public/logo/unreal-engine-500px.png" alt="">
+                        <img class="image_of_game_engine_png" src="logo/unreal-engine-500px.png" alt="">
                     </div>
                     <div class="title_of_game_engine_container">
                         <p class="title_of_game_engine">UNREAL ENGINE 4</p>
